--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Env Configurations - För att hålla känslig data utanför koden
+
 PORT=5000
-DATABASE_URI=mongodb+srv://LucasNykvist:MonaLisa@fixxocluster.dnsmryc.mongodb.net/test
+DATABASE_URI=mongodb+srv://LucasNykvist:MonaLisa@fixxocluster.dnsmryc.mongodb.net/test?retryWrites=true&w=majority
