imp reg + login + auth

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 
 PORT=5000
 DATABASE_URI=mongodb+srv://LucasNykvist:MonaLisa@fixxocluster.dnsmryc.mongodb.net/test?retryWrites=true&w=majority
+SECRET=SECRETSECRET123123
